add more examples to nouns page

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -212,11 +212,19 @@ This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
+<HisyeoTabs>
+  <p>yünyoü ü noyo cö sölü win zowopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
+</HisyeoTabs>
+
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the topic or context of the
 committed act of the predicate or that the act itself was committed but with a
 topic/context that is something other than the marked noun phrase. In English,
 this represents some of the senses of the word "regardless".
+
+<HisyeoTabs>
+  <p>si mokon ü umo Depölo cö ünvünö nomü win yök longı loı. <em>"Deborah ate the broccoli regardless its color."</em></p>
+</HisyeoTabs>
 
 ### Counter-Agent
 
@@ -255,7 +263,7 @@ finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
-marked noun phrase is either excluded from being the distance ordutation of the
+marked noun phrase is either excluded from being the distance or duration of the
 committed act of the predicate or that the act itself was committed but with a
 duration or distance that is something other than the marked noun phrase.
 
@@ -267,6 +275,10 @@ This role is used for either a NP that represents the a time or physical entity
 that the action occurs between or a conjunction of two NPs that represent two
 boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
+
+<HisyeoTabs>
+  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et do gıtno piek. <em>"I could eat a hamburger."</em></p>
+</HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the intermediary entity of the
@@ -283,9 +295,17 @@ the predicate resembles or is a likeness of. It can also be used to introduce a
 of the senses of the words "like" and "as". When used with a subordinate clause,
 it can also represent the English phrase "as if".
 
+<HisyeoTabs>
+  <p>xoinpo dëko ü loı mıslı sıskın loı. <em>"He looks like his brother"</em></p>
+</HisyeoTabs>
+
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is not a likeness of the action or state of the predicate. In
 English, the word "unlike" would be an equivalent.
+
+<HisyeoTabs>
+  <p>mıslı yök nimü lı yök öni cıvulo yë xön ëto. <em>"Unlike you, I'm not a great dancer."</em></p>
+</HisyeoTabs>
 
 ### Genitive
 
