Add more examples to nouns ref page

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -296,7 +296,8 @@ of the senses of the words "like" and "as". When used with a subordinate clause,
 it can also represent the English phrase "as if".
 
 <HisyeoTabs>
-  <p>xoinpo dëko ü loı mıslı sıskın loı. <em>"He looks like his brother"</em></p>
+  <p>xoinpo dëko ü loı mıslı sıskın loı. <em>"He looks like his brother."</em></p>
+  <p>si tüu cö künhiun pis ü umo moskül nokdo mıslı do ke zigil. <em>"The old man stumbled, as if he were about to fall."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -304,7 +305,7 @@ marked noun phrase is not a likeness of the action or state of the predicate. In
 English, the word "unlike" would be an equivalent.
 
 <HisyeoTabs>
-  <p>mıslı yök nimü lı yök öni cıvulo yë xön ëto. <em>"Unlike you, I'm not a great dancer."</em></p>
+  <p>mıslı yök nimü lı yök öni cıvulo yë xön ëto ü noyo. <em>"Unlike you, I'm not a great dancer."</em></p>
 </HisyeoTabs>
 
 ### Genitive
@@ -405,8 +406,8 @@ eating meat" means something different from "eating meat".
 
 The first sentence implies that the speaker hates specifically the act of eating
 meat whereas the second sentence implies that the speaker hates matters of meat
-eating altogether which broadens the hate to the act of discussing or thinking
-about it. 
+eating altogether which broadens the hate to anything related to the act or its
+part in human life or otherwise. 
 
 :::
 
@@ -431,12 +432,12 @@ an indirect object of "you" and an direct object infinitve phrase of "to want
 me". This might seem like the wrong translation since there is a preposition
 that Hisyëö typically uses for indirect objects. This is just an example of some
 of the irregular English grammar around the use of the verb "to want". In
-Hisyëö, the best translation is to use a finite noun phrase where the indirect
+Hisyëö, the best approach is to use a finite noun phrase where the indirect
 object of the English sentence is now the subject of the inner noun clause.
 
 :::
 
-There are other uses of these same particles as relative clause introducers and
-you can learn more about those usages in the Modifiers chapter.
+There are other uses of these same clause particles as relative clause
+introducers and you can learn more about those usages in the Modifiers chapter.
 
 <HisyeoTooltip/>
