update intro to new grammar

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -139,7 +139,7 @@ write a few basic sentences.
 
 Some basic words to get you started on sentence construction.
 
-#### Choose a subject (preceded by <HisyeoWord is='ü'/>):
+#### Choose a subject:
 <HisyeoTabs>
    <p>noyo <em>I</em></p>
    <p>nimü <em>you</em></p>
@@ -147,7 +147,7 @@ Some basic words to get you started on sentence construction.
    <p>niün <em>they</em></p>
 </HisyeoTabs>
 
-#### Choose a verb (preceded by <HisyeoWord is='lı'/> or omitted if first):
+#### Choose a verb:
 <HisyeoTabs>
    <p>köto   <em>to say</em></p>
    <p>monodo <em>to meet</em></p>
@@ -155,7 +155,7 @@ Some basic words to get you started on sentence construction.
    <p>vısun  <em>to know</em></p>
 </HisyeoTabs>
 
-#### Choose an object (preceded by <HisyeoWord is='cö'/>):
+#### Choose an object:
 <HisyeoTabs>
    <p>ulyö   <em>that</em></p>
    <p>küöxı  <em>fruit</em></p>
@@ -175,8 +175,8 @@ Some basic words to get you started on sentence construction.
 #### Now, make a sentence...
 
 <HisyeoTabs>
-   <p>ü noyo lı mokon cö küöxı <em>I eat fruit</em></p>
-   <p>vısun ü nimü cö sütüö ko <em>Do you know a friend?</em></p>
+   <p>noyo mokon küöxı <em>I eat fruit</em></p>
+   <p>nimü vısun sütüö noyo ko <em>Do you know my friend?</em></p>
 </HisyeoTabs>
 
 ## Next Steps
