update grammar on first steps lesson

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -80,19 +80,19 @@ wet so that you can begin your immersion training.
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
 - <HisyeoText kind='latin'>voxo. <em>woah!</em></HisyeoText>
-- <HisyeoText kind='latin'>küu lö ü ni. <em>Let's go!</em></HisyeoText>
-- <HisyeoText kind='latin'>gö zık ü nimü. <em>How are you doing?</em></HisyeoText>
-- <HisyeoText kind='latin'>xön ü noyo. <em>I am good.</em></HisyeoText>
-- <HisyeoText kind='latin'>si gö zık ü lono nimü. <em>How has your day been?</em></HisyeoText>
-- <HisyeoText kind='latin'>yök xön. <em>Not good.</em></HisyeoText>
-- <HisyeoText kind='latin'>yonlüs ü zık. <em>What's wrong?</em></HisyeoText>
-- <HisyeoText kind='latin'>yök sonkon <em>It doesn't matter.</em></HisyeoText>
+- <HisyeoText kind='latin'>ni küu lı lö. <em>Let's go!</em></HisyeoText>
+- <HisyeoText kind='latin'>nimü lı pı zık. <em>How are you doing?</em></HisyeoText>
+- <HisyeoText kind='latin'>noyo lı pı xön. <em>I am good.</em></HisyeoText>
+- <HisyeoText kind='latin'>lono nimü lı si gö pı zık. <em>How has your day been?</em></HisyeoText>
+- <HisyeoText kind='latin'>lı yök xön. <em>Not good.</em></HisyeoText>
+- <HisyeoText kind='latin'>zık lı yonlüs. <em>What's wrong?</em></HisyeoText>
+- <HisyeoText kind='latin'>lı yök sonkon <em>It doesn't matter.</em></HisyeoText>
 - <HisyeoText kind='latin'>...ci. <em>...agree?</em></HisyeoText>
 - <HisyeoText kind='latin'>löicök. <em>definitely!</em></HisyeoText>
-- <HisyeoText kind='latin'>yünlön cö noyo. <em>Sorry!</em></HisyeoText>
-- <HisyeoText kind='latin'>küu yök cinzon. <em>Don't worry!</em></HisyeoText>
-- <HisyeoText kind='latin'>yök ixölö. <em>It's not a problem.</em></HisyeoText>
-- <HisyeoText kind='latin'>köi gö ü noyo hoi limien ko <em>Can I come in?</em></HisyeoText>
+- <HisyeoText kind='latin'>küu yünlön noyo. <em>Sorry!</em></HisyeoText>
+- <HisyeoText kind='latin'>küu lı yök cinzon. <em>Don't worry!</em></HisyeoText>
+- <HisyeoText kind='latin'>lı yök ixölö. <em>It's not a problem.</em></HisyeoText>
+- <HisyeoText kind='latin'>noyo köi di hoi limien ko. <em>Can I come in?</em></HisyeoText>
 
 :::
 
