--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -80,11 +80,11 @@ wet so that you can begin your immersion training.
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
 - <HisyeoText kind='latin'>voxo. <em>woah!</em></HisyeoText>
-- <HisyeoText kind='latin'>ni küu lı lö. <em>Let's go!</em></HisyeoText>
+- <HisyeoText kind='latin'>nü küu lı lö. <em>Let's go!</em></HisyeoText>
 - <HisyeoText kind='latin'>nimü lı pı zık. <em>How are you doing?</em></HisyeoText>
 - <HisyeoText kind='latin'>noyo lı pı xön. <em>I am good.</em></HisyeoText>
 - <HisyeoText kind='latin'>lono nimü lı si gö pı zık. <em>How has your day been?</em></HisyeoText>
-- <HisyeoText kind='latin'>lı yök xön. <em>Not good.</em></HisyeoText>
+- <HisyeoText kind='latin'>pı yök xön. <em>Not good.</em></HisyeoText>
 - <HisyeoText kind='latin'>zık lı yonlüs. <em>What's wrong?</em></HisyeoText>
 - <HisyeoText kind='latin'>lı yök sonkon <em>It doesn't matter.</em></HisyeoText>
 - <HisyeoText kind='latin'>...ci. <em>...agree?</em></HisyeoText>
@@ -92,7 +92,7 @@ in day-to-day conversation:
 - <HisyeoText kind='latin'>küu yünlön noyo. <em>Sorry!</em></HisyeoText>
 - <HisyeoText kind='latin'>küu lı yök cinzon. <em>Don't worry!</em></HisyeoText>
 - <HisyeoText kind='latin'>lı yök ixölö. <em>It's not a problem.</em></HisyeoText>
-- <HisyeoText kind='latin'>noyo köi di hoi limien ko. <em>Can I come in?</em></HisyeoText>
+- <HisyeoText kind='latin'>noyo köi di do hoi limien ko. <em>Can I come in?</em></HisyeoText>
 
 :::
 
