add vowel allophones

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -102,41 +102,51 @@ Learning how to pronounce the words requires learning how each of the 24
 phonemes work and how they combine to form syllables. Each translation has a
 wide array of acceptable alternatives that you can use if certain sounds are too
 challenging. The distance between each sound can be subtle in certain words and
-with certain speakers but the words were chosen in such a way that there
-shouldn't be words that have a nearby pronunciation which would be too difficult
-to differentiate.
+with certain speakers but the all of the words of Hisyëö were chosen in such a
+way that there shouldn't be words that have a nearby pronunciation which would
+be too difficult to differentiate.
 
 ### Alphabet
 
 #### Vowels
 
-##### o - open back unrounded vowel
-as in sl**o**t or f**a**ther
+##### o - open back unrounded vowel [ɑ]
+- as in sl**o**t or f**a**ther
+- can also be other open vowels: [a], [ɶ], [ɒ], 
 
-##### ö - open-mid back rounded vowel
-as in r**ou**pe or Camb**o**dia
-*slightly geminated*
+##### ö - open-mid back rounded vowel [ɔ]
+- as in r**ou**pe or Camb**o**dia
+- can also be other central and back rounded vowels: [ɞ], [ɵ], [o]
+- *slightly geminated*
 
-##### e - open-mid front unrounded vowel
-as in b**e**d or c**a**t
+##### e - open-mid front unrounded vowel [ɛ]
+- as in b**e**d or c**a**t
+- can also be other open-mid front vowels: [æ], [œ]
 
-##### ë - close-mid front unrounded vowel
-as in m**a**y or f**a**ce
-*slightly geminated*
+##### ë - close-mid front unrounded vowel [e]
+- as in m**a**y or f**a**ce
+- can also be rounded [ø]
+- *slightly geminated*
 
-##### ı - near-close near-front unrounded vowel
-as in c**i**ty or w**i**ll
+##### ı - near-close near-front unrounded vowel [ɪ]
+- as in c**i**ty or w**i**ll
+- can be rounded [ʏ]
+- and the close central unrounded vowel [ɨ]
+- lastly, can be the close-mid central unrounded vowel [ɘ]
 
-##### i - close front unrounded vowel
-as in happ**y** or c**ei**ling
-*slightly geminated*
+##### i - close front unrounded vowel [i]
+- as in happ**y** or c**ei**ling
+- can also be rounded [y]
+- *slightly geminated*
 
-##### u - open-mid back unrounded vowel
-as in r**u**n or en**ou**gh
+##### u - open-mid back unrounded vowel [ʌ]
+- as in r**u**n or en**ou**gh
+- can also be other central and back undrounded vowels: [ə], [ɜ]. [ɐ], [ɤ]
 
 ##### ü - close back rounded vowel
-as in l**o**se, thr**ou**gh
-*slightly geminated*
+- as in l**o**se, thr**ou**gh
+- can also be other back rounded and unrounded vowels: [ʉ], [ɯ], [ʊ]
+- *slightly geminated*
 
 
 #### Consonants
