Add some greetings info

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -2,17 +2,65 @@
 sidebar_position: 3
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Greetings & Salutations
 
 How to say hello, introduce yourself and describe where you're from.
 
+## Verbs & Gerunds.
+
+Meeting someone involves the verb <HisyeoWord is='monodo'/> and a usage of a
+subordinate clause. The subordinate clause acts similar to a
+[gerund](https://en.wikipedia.org/wiki/Gerund) would in English, meaning that it 
+allows you to refer to the action of the verb as a noun.
+
+<HisyeoTabs>
+    <p>lı küzoü ü do kelo vio öni tüek. <em>Playing on computers is awesome.</em></p>
+    <p>noyo süko do kelo vio öni tüek. <em>I like playing on computers.</em></p>
+</HisyeoTabs>
+
+I didn't start the first example with a subject and instead provided it after
+the verb (<HisyeoWord is='lı'/>) by using the subject preposition
+(<HisyeoWord is='ü'/>) because this allowed me to introduce the subordinate
+clause at the end of the sentence which reduces the need for a comma or a pause
+when speaking. In the second sentence, since the subordinate clause is being
+provided as the object of the verb, it also is the last argument of the
+sentence.
+
 ## Meet & Greet
+
+Using this knowledge, we can build the first sentences for meeting people.
 
 ### Meeting Someone
 
+<HisyeoTabs>
+    <p>noyo monodo niün hoi suhot dus <em>I am meeting them at 10</em></p>
+    <p>nü küu monodo oxon cöüvon pıtün <em>Let's meet for supper</em></p>
+    <p>nimü völun do monodo noyo hoi cıhöü ko <em>Do you want to meet me later?</em></p>
+</HisyeoTabs>
+
 ### How To Greet
 
+<HisyeoTabs>
+    <p>lı xön ü do monodo nimü löicök. <em>It is so nice to meet you.</em></p>
+    <p>pı yüpik ü do monodo nimü. <em>Lovely to meet you.</em></p>
+    <p>lı xön ëto ü do dëko nimü. <em>It is great to see you.</em></p>
+</HisyeoTabs>
+
 ### Responding To A Greeting
+
+<HisyeoTabs>
+    <p>lı konxo.<em>Thank you.</em></p>
+    <p>lı konxo pı ëto löicök. <em>Thank you so much.</em></p>
+    <p>oxon noyo ütok. <em>For me also.</em></p>
+    <p>lı xön ü do monodo nimü ütok. <em>It is nice to meet you too.</em></p>
+</HisyeoTabs>
 
 ### When You'll Meet Again
 
@@ -33,3 +81,5 @@ How to say hello, introduce yourself and describe where you're from.
 ### Inviting Someone
 
 ### Being Invited
+
+<HisyeoTooltip />
