add more phoneme details

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -151,52 +151,70 @@ be too difficult to differentiate.
 
 #### Consonants
 
-##### h - voiceless glottal fricative
-as in **h**am or **h**old
+##### h - voiceless glottal fricative [h]
+- as in **h**am or **h**old
+- can also be velar, pharyngeal, or uvular voiceless fricatives: [x], [ɣ], [ʁ], [ħ]
 
-##### k - voiceless velar plosive
-as in **c**up or sti**ck**
+##### k - voiceless velar plosive [k]
+- as in **c**up or sti**ck**
+- can also be the uvular voiceless plosive [q]
 
-##### g - voiced velar plosive
-as in **g**old or sna**g**
+##### g - voiced velar plosive [g]
+- as in **g**old or sna**g**
+- can also be the uvular voiced plosive [ɢ]
 
-##### t - voiceless dental/alveolar plosive
-as in **t**ip or pu**tt**
+##### t - voiceless dental/alveolar plosive [t]
+- as in **t**ip or pu**tt**
+- can also be the retroflex equivalent [ʈ]
 
-##### c - voiceless postalveolar affricate
-as in **ch**ore or na**t**ure
+##### c - voiceless postalveolar affricate [t͡ʃ]
+- as in **ch**ore or na**t**ure
+- can also be alveolar or retroflex: [t͡ɕ], [ʈ͡ʂ]
 
-##### s - voiceless alveolar fricative
-as in mi**s**t or i**c**e
+##### s - voiceless alveolar fricative [s]
+- as in mi**s**t or i**c**e
+- can be either voiceless or voiced [z]
 
-##### x - voiceless postalveolar fricative
-as in a**sh** or ra**t**ion
+##### x - voiceless postalveolar fricative [ʃ]
+- as in a**sh** or ra**t**ion
+- can be either voiceless or voiced [ʒ]
 
-##### d - voiced dental/alveolar plosive
-as in **d**ig or ba**d** 
+##### d - voiced dental/alveolar plosive [d]
+- as in **d**ig or ba**d** 
+- can also be the retroflex equivalent [ɖ]
 
-##### z - voiced postalveolar affricate
-as in **j**og or a**g**e
+##### z - voiced postalveolar affricate [d͡ʒ]
+- as in **j**og or a**g**e
+- can also be alveolar or retroflex: [d͡ʑ], [ɖ͡ʐ]
 
-##### p - voiceless bilabial plosive
-as in **p**oke or si**p**
+##### p - voiceless bilabial plosive [p]
+- as in **p**oke or si**p**
+- can be either voiceless or voiced [b]
 
-##### v - voiced labiodental fricative
-as in **v**alid or ga**v**el
+##### v - voiced labiodental fricative [v]
+- as in **v**alid or ga**v**el
+- can be either voiced or voiceless [f]
 
-##### m - voiced bilabial nasal
-as in la**m**b or **m**ineral
+##### m - voiced bilabial nasal [m]
+- as in la**m**b or **m**ineral
+- can be labio-dental [ɱ]
 
 ##### n - voiced dental/alveolar nasal
-as in **n**od or ba**n**
+- as in **n**od or ba**n**
+- can be any other nasal: [ɳ], [ɲ], [ŋ], [ɴ]
 
-##### w - voiced labial–velar approximant
-as in **w**eep or a**w**ake
+##### w - voiced labial–velar approximant [w]
+- as in **w**eep or a**w**ake
+- try to avoid realizing as [ʋ] due to similarity to voiced labiodental fricative.
 
-##### l - voiced dental/alveolar lateral approximants
-as in **l**inger or ba**ll**ad
+##### l - voiced dental/alveolar lateral approximants [l]
+- as in **l**inger or ba**ll**ad
+- can also be realized as retroflex [ɭ] or tap/flap [ɾ]
+- most rhotic phonemes are transliterated as this letter
 
-##### y - voiced palatal approximant
-as in **y**earn or ma**y**o
+##### y - voiced palatal approximant [j]
+- as in **y**earn or ma**y**o
+- especially when preceded by a lateral approximant, this phoneme can be
+  realized as a palatal lateral approximant [ʎ]
 
 <HisyeoTooltip />
