convert some of the number-dates-times sentences to new grammar

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -202,7 +202,7 @@ Any series of numbers can be an ordinal as long as they appear on the right-hand
 side of a noun phrase.
 
 <HisyeoTabs>
-  <p>nıwos nonkü do hoi ximol "third house on the left"</p>
+  <p>nıwos son do hoi ximol "third house on the left"</p>
 </HisyeoTabs>
 
 As you'll see in the next section, this ordinal-on-the-right usage how we
@@ -240,14 +240,14 @@ In order to indicate a specific day use one of the demonstrative pronouns
 can use a day as a condition in a win prepositional phrase:
 
 <HisyeoTabs>
-  <p>win xokön lono xolxili, lı si lö xopëk müt motüo sënzö</p>
+  <p>win xokön lono xolxili, nü lı si lö pı xopëk müt motüo sënzö</p>
   <em>"Every Sunday, we used to go to grandpa's"</em>
 </HisyeoTabs>
 
 Asking what day of the week it is can be done by asking what color of day:
 
 <HisyeoTabs>
-  <p>longı zık ü lono övo? "What day is today?"</p>
+  <p>lono övo lı longı zık. <em>"What day is today?"</em></p>
 </HisyeoTabs>
 
 ### Months of the Year
@@ -310,11 +310,13 @@ object of a hoi preposition.
 ### Exact Dates
 
 Specifying an exact date involves using ordinals for the day, the week day
-terms, and ordinals for the months.
+terms, and ordinals for the months. When specifying what date a weekday has, a
+relative clause is used to treat the following  phrase as an
+[appositive](https://en.wikipedia.org/wiki/Apposition).
 
 <HisyeoTabs>
-  <p>lono kut yë wuto son ü lono övo <em>"Today is the March 1st"</em></p>
-  <p>lono lözic loı ü lono mihüon yë lono zıyön yë wuto tiü <em>"His birthday is Tuesday, May 14th"</em></p>
+  <p>lono övo lı lono kut yë wuto son. <em>"Today is the March 1st"</em></p>
+  <p>lono lözic niün lı lono mihüon do lı lono zıyön yë wuto tiü. <em>"His birthday is Tuesday, May 14th"</em></p>
 </HisyeoTabs>
 
 ### Saying Years
@@ -332,7 +334,7 @@ recent date, you can often just mention the final segment.
 To say dates in "BC" or "BCE", use the phrase yë ılık zızıme sodolun.
 
 <HisyeoTabs>
-  <p>köson kut cö sınsi Lömo hoi
+  <p>köson si sınsi Lömo hoi
      xëti tiü dus son yë
      ılık zızıme sodolun. <em>Rome was built in 753 BCE.</em></p>
 </HisyeoTabs>
@@ -341,9 +343,9 @@ When you are setting up a date or appointment, often times you want to provide w
 in addition to the date.
 
 <HisyeoTabs>
-  <p>hoi lono zingu yë lono
-     kinsë yë wuto son lı
-     cok ü noyo müt nıwos.
+  <p>noyo
+     hoi lono zingu do lı lono kinsë yë wuto son
+     lı cok müt nıwos.
      <em>Friday, the 15th of March, I am departing for home.</em></p>
 </HisyeoTabs>
 
